[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemy/Enemy 15-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/shadow.png" type="Texture" id=5]
[ext_resource path="res://Location_Astral_Dungeon/scripts7/Enemy.gd" type="Script" id=6]
[ext_resource path="res://Assets/Skeleton/Skeleton_death2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Skeleton/Skeleton_death0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Skeleton/Skeleton_death1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Skeleton/Skeleton_death3.png" type="Texture" id=10]
[ext_resource path="res://Location_Astral_Dungeon/scripts7/Enemy_Area2D.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 44.5, 73 )

[sub_resource type="Animation" id=4]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.199674, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ScalingAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "stop"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Scaling"
length = 2600.0

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -4, -6 )
z_index = -1
texture = ExtResource( 5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 9, -77 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16.5, -72 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="ScalingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Scaling"
anims/Scaling = SubResource( 6 )

[node name="HP" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Label" parent="."]
margin_left = -6.0
margin_top = -190.0
margin_right = 34.0
margin_bottom = -174.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack_Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -83 )
scale = Vector2( 2, 2 )
frames = SubResource( 14 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
